# todo_rust

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/db/: create_table.sh  insert_mock_data.sh  mod.rs
src/db/sh/: create_db.sh  create_table.sh
src/db/sql/: MOCK_DATA.sql
src/model/: mod.rs
