[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4" 
sqlx ={version="0.7",features=["runtime-tokio","tls-rustls","postgres","macros","migrate","uuid","time","chrono"]}
dotenv = "0.15.0"
serde = { version="1.0.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.4.0"
chrono ={version="0.4.26",features=["serde"]} 

